logo alignment fix on mobile - 2

--- a/setup/style/style.css
+++ b/setup/style/style.css
@@ -160,7 +160,7 @@ div[data-testid="stPopoverBody"] .stVerticalBlock {
   justify-content: center;
   align-items: center;
   margin-top: 5rem !important;
-  margin-bottom: 2rem !important;
+  margin-bottom: 1rem !important;
   margin-left: 0rem !important;
   margin-right: 0rem !important;
   padding: 0rem !important;
